message UID{	// 用户ID标识，全局唯一
	int64 userID = -1;
}

message Nickname{	// 用户昵称，全局唯一
	string name = "";
}

message Password{	// 用户密码
	string password = "";
}

message Score{	// 用户积分，初始值为1000，可以为负数
	int32 score = 1000;
}

message FriendList{		// 用户列表
	repeated int64 friends;
}

message WaitingFriendList{	// 待接收好友请求列表
	repeated int64 friends;
}

message MatchList{			// 用户对局历史记录
	repeated uint64 matchs;
}

message Rank{		// 用户排名
	uint32 rank;
}

message RankList{		// 用于描述积分排行榜
	repeated int64 users;
}

message Match{
	uint64 time;		// 自EPOCH以来的毫秒数
	map<int64, int32> userInfo;		// 每个参与者的得分情况
}

service UserInformation{
	rpc getUID(Nickname) 			returns (UID);
	
	rpc getNickname(UID) 			returns (Nickname);
	rpc getPassword(UID) 			returns (Password);
	rpc getScore(UID) 	 			returns (Score);
	rpc getFriendList(UID)			returns (FriendList);
	rpc getWaitingFriendList(UID)	returns (WaitingFriendList);
	rpc getMatchList(UID)			returns (MatchList);
	
	rpc rankMe(UID)					returns (Rank);
	rpc rankTop(Int32Value)			returns (RankList);		// 参数是排名列表的长度
}

service Social{
	rpc addFriend(UID)				returns (Empty);
	rpc deleteFriend(UID)			returns (Empty);
	rpc addWaitFriend(UID)			returns (Empty);
	rpc deleteWaitingFriend(UID)	returns (Empty);
}



